# com_chibifire_scene_optimize

./: CMakeLists.txt  README.md  build_dependencies.bat  build_dependencies_osx.sh
sample/: project.godot
sample/addons/com_chibifire_scene_optimize/: com_chibifire_scene_optimize.gd  com_chibifire_scene_optimize.gdnlib  com_chibifire_scene_optimize.gdns  plugin.cfg
sample/addons/com_chibifire_scene_optimize/src/: ComChibifireSceneOptimize.cpp  ComChibifireSceneOptimize.h  Godot.cpp
